--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(174, 174, 175);">
             <div class="container-fluid">
-                <div class="navbar-brand" href="#" style="font-weight: bold; font-size: xx-large; font-style: italic; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Movies<span>Mania</span></div>
+                <div class="navbar-brand" href="#" style="font-weight: bold; font-size: xx-large; font-style: italic; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Movie<span>Mania</span></div>
 
                 <!-- Toggle button for minimised search-bar -->
                 <button class="navbar-toggler" type="button"
